# mlops-demo

./: .gitignore  Dockerfile  README.md  deploy.py  influx.py  main.py  pyproject.toml  requirements.txt  test.py  train.py
.github/workflows/: deploy.yaml  publish.yaml
dataset/: X_test.npy  X_train.npy  y_test.npy  y_train.npy
models/: model.pkl
